--- a/css/components/_cart-total.scss
+++ b/css/components/_cart-total.scss
@@ -72,7 +72,7 @@
 
       a {
         text-decoration: none;
-        background-color: whitesmoke;
+        background-color: $secondary-color;
         padding: 1em;
         font-weight: bold;
         border-radius: 5px;
