--- a/css/_media-queries.scss
+++ b/css/_media-queries.scss
@@ -99,6 +99,12 @@
         }
       }
     }
+
+    .woocommerce {
+      table {
+        width: 90%;
+      }
+    }
   }
 }
 
@@ -108,18 +114,24 @@
     font-size: 80%;
 
     header {
-      .nav-container {
-        .dashicons-search {
-          right: 150px;
-        }
+      .header-wrapper {
+        .nav-container {
+          .dashicons-search {
+            right: 175px;
+          }
 
-        .cart-link {
-          right: 95px;
-        }
+          .cart-icon-link {
+            right: 72px;
 
-        .hamburger {
-          right: 20px;
-          top: 8px;
+            .cart-icon-wrapper {
+              gap: 2em;
+            }
+          }
+
+          .hamburger {
+            right: 20px;
+            top: 10px;
+          }
         }
       }
     }
@@ -187,34 +199,33 @@
     font-size: 90%;
 
     header {
-      .header-wrapper {
-        .logo {
-          width: 8em;
-          margin-left: 1em;
-          margin-top: 0.5em;
-          padding-top: 0.5em;
+      box-shadow: none;
+      background-color: transparent;
 
-          img {
-            width: 100%;
-          }
+      .header-wrapper {
+        display: flex;
+        justify-content: space-between;
+        padding-top: 0.5em;
+
+        .logo {
+          position: relative;
+          top: 10px;
+          left: 18px;
         }
 
         .nav-container {
           display: flex;
           justify-content: center;
-          align-items: center;
-          width: fit-content;
 
           .nav-menu-wrapper {
             background-color: initial;
             position: relative;
+            left: 290px;
             height: auto;
-            left: 440px;
-            width: auto;
+            width: fit-content;
 
             .menu-top-menu-container {
               ul {
-                margin-left: 10em;
                 flex-direction: row;
                 gap: 4em;
 
@@ -226,15 +237,6 @@
                   &:nth-child(2) {
                     display: block;
                   }
-
-                  &.current_page_item {
-                    a,
-                    span {
-                      text-decoration: underline;
-                      text-underline-offset: 15px;
-                      text-decoration-thickness: 3px;
-                    }
-                  }
                 }
               }
             }
@@ -244,14 +246,14 @@
             display: none;
           }
 
-          .cart-link {
+          .cart-icon-link {
             display: none;
           }
 
           .dashicons-search {
             position: relative;
-            right: 30px;
-            top: 0;
+            right: 50px;
+            top: 15px;
             font-size: 1.5rem;
           }
         }
@@ -294,11 +296,26 @@
     font-size: 100%;
 
     header {
-      .nav-container {
-        .dashicons-search {
-          right: 60px;
+      .header-wrapper {
+        .logo {
+          left: 25px;
+          top: 12px;
+        }
+
+        .nav-container {
+          .nav-menu-wrapper {
+            left: 300px;
+          }
+          .dashicons-search {
+            right: 70px;
+            top: 18px;
+          }
         }
       }
+    }
+
+    main {
+      margin-top: -1em;
     }
 
     .search-wrapper-hidden {
