--- a/css/_mixins.scss
+++ b/css/_mixins.scss
@@ -4,6 +4,7 @@
   border-radius: 5px;
   border: none;
   color: #282828;
+  box-shadow: 0 0 6px gray;
   margin-top: 2em;
   font-weight: bold;
   transform: translateY(0);
@@ -31,7 +32,7 @@
       outline: none;
       pointer-events: none;
       text-align: center;
-      width: 3em;
+      width: 2em;
     }
 
     // Remove arrows from input number
