--- a/css/components/_cart.scss
+++ b/css/components/_cart.scss
@@ -3,15 +3,14 @@ a {
 }
 
 form {
-  width: 100vw;
+  margin-top: 4em;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 4em 0 5em 0;
   border-radius: 2px;
 
   table {
-    width: 80%;
     border-collapse: separate;
     border-spacing: 1em 1em;
 
@@ -44,8 +43,8 @@ form {
 
         .product-thumbnail {
           img {
-            width: 5em;
-            height: 5em;
+            width: 4em;
+            height: 4em;
             border-radius: 2px;
             transition: transform 0.8s ease;
 
@@ -87,13 +86,13 @@ form {
 
         .wp-element-button {
           margin-top: 2em;
-          box-shadow: 0 3px 2px -2px gray;
+          box-shadow: 0 0 6px gray;
           border-radius: 5px;
-          opacity: 0.9;
           background-color: $secondary-color;
+          transition: transform 0.2s ease;
 
           &:hover {
-            opacity: 1;
+            transform: translateY(-2px);
           }
         }
 
@@ -106,12 +105,6 @@ form {
           &.active {
             border: 3px solid green;
           }
-
-          transition: background-color 0.5s ease-in-out;
-
-          &:hover {
-            background-color: green;
-          }
         }
       }
     }
@@ -119,7 +112,8 @@ form {
 }
 
 hr {
-  width: 90%;
+  margin-top: 4em;
+  width: 80%;
   border: 0.5px solid gray;
 }
 
