--- a/css/components/_checkout.scss
+++ b/css/components/_checkout.scss
@@ -14,6 +14,7 @@
 }
 
 .checkout {
+  margin-top: 4em;
   padding: 3em 4em;
   display: flex;
   flex-direction: column;
@@ -93,7 +94,7 @@
         font-weight: bold;
         font-size: 1.2rem;
         width: 20em;
-        background-color: white;
+        background-color: $secondary-color;
         box-shadow: 0 3px 2px -2px gray;
       }
     }
