--- a/css/components/_mobile-menu.scss
+++ b/css/components/_mobile-menu.scss
@@ -1,155 +1,179 @@
 header {
+  background-color: #e7dfcc;
+  box-shadow: 0 5px 5px -5px black;
+
   .header-wrapper {
     .logo {
       width: 8em;
-      margin-left: 1em;
-      margin-top: 0.8em;
+      position: absolute;
+      left: 8px;
+      top: 10px;
 
       img {
         width: 100%;
       }
     }
-  }
 
-  .nav-container {
-    .nav-menu-wrapper {
-      background-color: rgb(228, 203, 177);
-      position: fixed;
-      height: 100vh;
-      width: 100vw;
-      top: 0;
-      left: 0;
-      transform: translateX(-100%);
-      transition: transform 0.4s ease-in-out;
+    .nav-container {
+      .nav-menu-wrapper {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: rgb(228, 203, 177);
+        position: fixed;
+        height: 100vh;
+        width: 100vw;
+        top: 0;
+        left: 0;
+        transform: translateX(-100%);
+        transition: transform 0.4s ease-in-out;
 
-      .menu-top-menu-container {
-        ul {
-          padding: 0;
-          margin: 0;
-          flex-direction: column;
-          justify-content: center;
-          align-items: center;
-          gap: 18em;
+        .menu-top-menu-container {
+          ul {
+            padding: 0;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 18em;
 
-          li {
-            transform: translateX(-100px);
-            transition: transform 0.5s ease;
+            li {
+              list-style-type: none;
+              transform: translateX(-100px);
+              transition: transform 0.5s ease;
 
-            a {
-              font-size: 2.5rem;
+              a {
+                font-size: 2.5rem;
+              }
+
+              &:nth-child(2) {
+                display: none;
+              }
+
+              &.current_page_item {
+                a,
+                span {
+                  color: whitesmoke;
+                }
+              }
             }
+          }
+        }
 
-            &:nth-child(2) {
-              display: none;
-            }
+        &.open {
+          transform: translateX(0);
 
-            &.current_page_item {
-              a,
-              span {
-                text-decoration: none;
+          ul {
+            li {
+              transform: translateX(0);
+
+              &:nth-child(1) {
+                transition-delay: 100ms;
+              }
+
+              &:nth-child(3) {
+                transition-delay: 200ms;
               }
             }
           }
         }
       }
 
-      &.open {
-        transform: translateX(0);
+      .dashicons-search {
+        position: absolute;
+        right: 105px;
+        top: 7.5px;
+        font-size: 3.5rem;
+      }
 
-        ul {
-          li {
-            transform: translateX(0);
+      .cart-icon-link {
+        text-decoration: none;
+        position: absolute;
+        right: 45px;
+        top: 8.5px;
 
-            &:nth-child(1) {
-              transition-delay: 100ms;
-            }
+        .cart-icon-wrapper {
+          display: flex;
+          gap: 0.8em;
+          width: 5em;
 
-            &:nth-child(3) {
-              transition-delay: 200ms;
-            }
+          .dashicons-cart {
+            font-size: 3rem;
+            align-self: flex-start;
+          }
+
+          .product-count {
+            font-size: 3rem;
+            position: relative;
+            bottom: 2px;
+            align-self: flex-end;
           }
         }
       }
-    }
 
-    .dashicons-search {
-      position: absolute;
-      right: 95px;
-      top: 5px;
-      font-size: 3.5rem;
-    }
-
-    .cart-link {
-      width: max-content;
-      text-decoration: none;
-      position: absolute;
-      right: 55px;
-      top: 6px;
-
-      span {
-        font-size: 3rem;
-      }
-    }
-
-    .hamburger {
-      position: absolute;
-      top: 5px;
-      right: 12px;
-      z-index: 20;
-      width: 3em;
-      height: 3em;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      rotate: 0deg;
-      transition: rotate 0.2s linear;
-
-      div {
+      .hamburger {
         position: absolute;
-        background-color: black;
-        border-radius: 5px;
-        width: 100%;
-        height: 2px;
-        transition: opacity 0.2s linear;
-      }
-
-      &::before {
-        position: absolute;
-        content: '';
-        background-color: black;
-        border-radius: 5px;
-        width: 100%;
-        height: 2px;
-        transform: translateY(8px);
-        transition: transform 0.2s linear;
-      }
-
-      &::after {
-        position: absolute;
-        content: '';
-        background-color: black;
-        border-radius: 5px;
-        width: 100%;
-        height: 2px;
-        transform: translateY(-8px);
-        transition: transform 0.2s linear;
-      }
-
-      // Turns into X when clicked
-      &.active {
-        rotate: 180deg;
+        top: 8px;
+        right: 10px;
+        z-index: 20;
+        width: 3em;
+        height: 3em;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        rotate: 0deg;
+        transition: rotate 0.2s linear;
 
         div {
-          opacity: 0;
+          position: absolute;
+          background-color: black;
+          border-radius: 5px;
+          width: 100%;
+          height: 2px;
+          transition: opacity 0.2s linear;
         }
 
         &::before {
-          transform: rotate(45deg);
+          position: absolute;
+          content: '';
+          background-color: black;
+          border-radius: 5px;
+          width: 100%;
+          height: 2px;
+          transform: translateY(8px);
+          transition: transform 0.2s linear;
         }
 
-        &:after {
-          transform: rotate(-45deg);
+        &::after {
+          position: absolute;
+          content: '';
+          background-color: black;
+          border-radius: 5px;
+          width: 100%;
+          height: 2px;
+          transform: translateY(-8px);
+          transition: transform 0.2s linear;
+        }
+
+        // Turns into X when clicked
+        &.active {
+          rotate: 180deg;
+
+          div {
+            opacity: 0;
+          }
+
+          &::before {
+            transform: rotate(45deg);
+          }
+
+          &:after {
+            transform: rotate(-45deg);
+          }
         }
       }
     }
