--- a/css/components/_search-form.scss
+++ b/css/components/_search-form.scss
@@ -13,11 +13,11 @@
   box-shadow: 0 3px 3px -1px gray;
   z-index: -1;
   opacity: 0;
-  -webkit-transition: all 0s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -ms-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 
   .search-input-field {
     width: 100%;
@@ -40,6 +40,7 @@
       border: none;
       border-radius: 30px;
       width: 90%;
+      box-shadow: 0 0 6px gray;
 
       &::placeholder {
         color: lightgray;
