--- a/css/components/_header.scss
+++ b/css/components/_header.scss
@@ -25,12 +25,12 @@ header {
               transition: color 0.4s ease;
 
               &:hover {
-                color: gainsboro;
+                color: whitesmoke;
               }
 
               &:hover {
                 span {
-                  color: gainsboro;
+                  color: whitesmoke;
                 }
               }
             }
