--- a/css/style.scss
+++ b/css/style.scss
@@ -75,6 +75,7 @@ body {
 
     @import 'components/home';
     @import 'components/single-product';
+    @import './components/404';
   }
 
   .woocommerce {
